# simple-rss-creator

./: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md
src/: auth.rs  error.rs  main.rs  rss.rs  settings.rs  state.rs
src/routes/: health.rs  mod.rs  rss.rs
static-files/: index.html  manifest.json  sw-reg.js  sw.js
